k8s/ingress/edge-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge
  annotations:
    cert-manager.io/cluster-issuer: local-selfsigned
spec:
  ingressClassName: nginx-edge # <-- asegúrate que coincide con tu controlador
  tls:
    - hosts:
        - localhost
      secretName: edge-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-gateway
                port:
                  number: 80
