k8s/ingress/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wellness-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: wellness.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000

      - path: /health
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
